# camera3D_xyzrgb

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: detector.yaml
include/camera3d_xyzrgb/: Bbox.h  Detector.h
include/realsense_devel/: Bbox.h  Detector.h
launch/: bag_lidar_camera.launch  depth_to_point_cloud_xyzrgb.launch  object_detection.launch  pcd_filter.launch  pcd_filter_class.launch  sim.launch  test_camera.launch  test_rviz.launch  tree1sim.launch
msg/: BoundingBox3DArray.msg
rviz/: camera_bag.rviz  husky_test_camera.rviz  husky_test_obs.rviz  sim_bbox.rviz
src/: Bbox.cpp  Detector.cpp  bbox_moi.cpp  bbox_node.cpp  camera_tf_broadcaster.cpp  camera_tf_listener.cpp  clustering1.cpp  detector_node.cpp  pcl1.cpp  pcl3.cpp  pcl4.cpp  points_subscriber.cpp
src/obstacle_detection_v1/: bbox_backup.cpp  bbox_pca.cpp  cloud_viewer.cpp  clustering1 (copy).cpp  clustering1.cpp  main.cpp  saveSingleMsg.cpp  test_bbox.cpp
src/obstacle_detection_v2/: main.cpp
src/test/: pcl1.cpp  pcl2.cpp  pcl4.cpp
